--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
@@ -20,6 +21,7 @@
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
     "swiper": "^11.0.3",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
