changes in the server

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MAIL_HOST = smtp.gmail.com
-MAIL_USER = eGuruAcademy2@gmail.com
-MAIL_PASS = frhhmlnplbdcywka
+MAIL_USER = egurucademy@gmail.com
+MAIL_PASS = fdxqergcwtzomnpry
 
 JWT_SECRET = "yash"
 FOLDER_NAME = "eGuru Academy"
