--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.0",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
+    "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
