--- a/server/.env
+++ b/server/.env
@@ -15,3 +15,4 @@ API_SECRET = N6AI36CwjtBm-wVMWsM63DjEzUQ
 MONGODB_URL = "mongodb+srv://scholarlysolution:Yepboj54SxDlwUtn@cluster0.fotqywz.mongodb.net/scholarlysolutionDB"
 PORT = 4000
 
+REACT_APP_BASE_URL = http://localhost:4000/api/v1
